--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,6 +15,9 @@
             app:destination="@id/resultFragment"
             app:popUpTo="@id/gameFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_gameFragment_to_questionsFragment2"
+            app:destination="@id/questionsFragment" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
@@ -28,4 +31,8 @@
             android:id="@+id/action_resultFragment_to_gameFragment"
             app:destination="@id/gameFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/questionsFragment"
+        android:name="ru.openunity.guessinggame.QuestionsFragment"
+        android:label="QuestionsFragment" />
 </navigation>
