--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -1,40 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp">
+    <data>
+        <variable
+            name="question"
+            type="ru.openunity.guessinggame.Question" />
+    </data>
+    <androidx.cardview.widget.CardView
 
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="8dp"
 
-        <TextView
-            android:id="@+id/question"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="16sp" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/answer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/questionView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textSize="16sp"
+                android:text="@{question.question}"/>
 
-        <CheckBox
-            android:id="@+id/is_active"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:padding="8dp"
-            android:text="@string/question_active"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/answerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:textSize="16sp"
+                android:text="@{question.answer}"/>
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+            <CheckBox
+                android:id="@+id/is_active"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:padding="8dp"
+                android:text="@string/question_active"
+                android:textSize="16sp"
+                android:checked="@{question.isActive}"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
