--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -38,7 +38,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints="no"
                         android:hint="@string/hint_question"
-                        android:inputType="text"
+                        android:inputType="textMultiLine"
                         android:minHeight="48dp"
                         android:padding="16dp"
                         android:text="@={viewModel.questionText}"
@@ -50,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints="no"
                         android:hint="@string/hint_answer"
-                        android:inputType="text"
+                        android:inputType="textMultiLine"
                         android:minHeight="48dp"
                         android:padding="16dp"
                         android:text="@={viewModel.answer}"
