Update the GameFragment and GameViewModel to display the question correctly.

--- a/app/src/main/res/layout/fragment_edit_question.xml
+++ b/app/src/main/res/layout/fragment_edit_question.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ru.openunity.guessinggame.EditQuestionViewModel" />
+            type="ru.openunity.guessinggame.ui.edit.EditQuestionViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
