--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-    <variable
-        name="gameViewModel"
-        type="ru.openunity.guessinggame.GameViewModel" />
+
+        <variable
+            name="gameViewModel"
+            type="ru.openunity.guessinggame.ui.game.GameViewModel" />
     </data>
 
     <LinearLayout
@@ -14,7 +15,18 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".GameFragment">
+        tools:context=".ui.game.GameFragment">
+
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:letterSpacing="0.1"
+            android:text="@{gameViewModel.currentQuestion.question}"
+            android:textSize="36sp"
+            android:textAlignment="center"
+            android:layout_margin="18dp"/>
 
         <TextView
             android:id="@+id/word"
@@ -22,22 +34,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:letterSpacing="0.1"
-            android:textSize="36sp"
-            android:text="@{gameViewModel.secretWordDisplay}"/>
+            android:text="@{gameViewModel.secretWordDisplay}"
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/lives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"/>
+            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/incorrect_guesses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"/>
+            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/guess"
@@ -61,7 +73,7 @@
             android:id="@+id/finish_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/finish_game_button"
-            android:onClick="@{() -> gameViewModel.finishGame()}"/>
+            android:onClick="@{() -> gameViewModel.finishGame()}"
+            android:text="@string/finish_game_button" />
     </LinearLayout>
 </layout>
