--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gameFragment"
-        android:name="ru.openunity.guessinggame.GameFragment"
+        android:name="ru.openunity.guessinggame.ui.game.GameFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_game" >
         <action
@@ -21,7 +21,7 @@
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
-        android:name="ru.openunity.guessinggame.ResultFragment"
+        android:name="ru.openunity.guessinggame.ui.result.ResultFragment"
         android:label="Result"
         tools:layout="@layout/fragment_result" >
         <argument
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/questionsFragment"
-        android:name="ru.openunity.guessinggame.QuestionsFragment"
+        android:name="ru.openunity.guessinggame.ui.question.QuestionsFragment"
         android:label="Questions" >
         <action
             android:id="@+id/action_questionsFragment_to_editQuestionFragment"
@@ -41,7 +41,7 @@
     </fragment>
     <fragment
         android:id="@+id/editQuestionFragment"
-        android:name="ru.openunity.guessinggame.EditQuestionFragment"
+        android:name="ru.openunity.guessinggame.ui.edit.EditQuestionFragment"
         android:label="Edit question"
         tools:layout="@layout/fragment_edit_question" >
         <argument
