--- a/app/src/main/res/layout/fragment_edit_question.xml
+++ b/app/src/main/res/layout/fragment_edit_question.xml
@@ -13,93 +13,152 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_left_indent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="120dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_end_of_first_block"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="220dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="8dp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp" />
+
+        <TextView
+            android:id="@+id/header_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_question"
+            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
+            app:layout_constraintTop_toBottomOf="@+id/guideline_top"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/header_title" />
+
         <EditText
             android:id="@+id/question_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:autofillHints="no"
+            android:layout_marginTop="8dp"
+            android:importantForAutofill="no"
             android:ems="10"
-            android:gravity="start|top"
-            android:hint="@string/hint_question"
             android:inputType="textMultiLine"
             android:minHeight="48dp"
-            android:padding="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left_indent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
             android:text="@={viewModel.question.question}"
             android:textColorHint="#546E7A"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/question_text"
+            android:text="@string/hint_question"
+            app:layout_constraintBaseline_toBaselineOf="@+id/question_text"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_left_indent"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left" />
 
         <EditText
             android:id="@+id/answer_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:autofillHints="no"
+            android:layout_marginTop="8dp"
+            android:importantForAutofill="no"
             android:ems="10"
             android:gravity="start|top"
-            android:hint="@string/hint_answer"
             android:inputType="textMultiLine"
             android:minHeight="48dp"
-            android:padding="16dp"
             android:text="@={viewModel.question.answer}"
             android:textColorHint="#546E7A"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left_indent"
             app:layout_constraintTop_toBottomOf="@+id/question_text" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/answer_text"
+            android:text="@string/hint_answer"
+            app:layout_constraintBaseline_toBaselineOf="@+id/answer_text"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_left_indent"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/switch_show"
+            android:text="@string/switch_show"
+            app:layout_constraintBaseline_toBaselineOf="@+id/switch_show"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_left_indent"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left" />
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/switch_show"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:checked="@={viewModel.question.active}"
-            android:text="@string/switch_show"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left_indent"
             app:layout_constraintTop_toBottomOf="@+id/answer_text" />
 
-        <Button
-            android:id="@+id/button_apply"
-            android:layout_width="118dp"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/saveButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:onClick="@{() -> viewModel.updateQuestion()}"
-            android:text="@string/button_apply"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/button_delete"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_cancel" />
-
-        <Button
-            android:id="@+id/button_delete"
-            android:layout_width="118dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#F44336"
-            android:onClick="@{() -> viewModel.deleteQuestion()}"
-            android:text="@string/button_delete"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/button_apply"
+            android:text="@string/save"
+            android:enabled="false"
+            style="@style/Widget.Material3.Button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button_apply"
-            app:layout_constraintTop_toTopOf="@+id/button_apply" />
-
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="118dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:onClick="@{() -> viewModel.cancel()}"
-            android:text="@string/button_cancel"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline_middle"
             app:layout_constraintTop_toBottomOf="@+id/switch_show" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/cancelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/cancel"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toTopOf="@+id/saveButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
