--- a/app/src/main/res/layout/fragment_edit_question.xml
+++ b/app/src/main/res/layout/fragment_edit_question.xml
@@ -158,6 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/button_delete"
+            app:backgroundTint="@color/design_default_color_error"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switch_show" />
