To delete a question by clicking on the icon in the card.

--- a/app/src/main/res/layout/fragment_edit_question.xml
+++ b/app/src/main/res/layout/fragment_edit_question.xml
@@ -145,22 +145,12 @@
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:enabled="false"
             android:text="@string/save"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="@+id/guideline_middle"
-            app:layout_constraintTop_toBottomOf="@+id/deleteButton" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/deleteButton"
-            style="@style/Widget.Material3.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/button_delete"
-            app:backgroundTint="@color/design_default_color_error"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switch_show" />
 
         <com.google.android.material.button.MaterialButton
